<resources>
    <string name="app_name" translatable="false">স্বাধীন অভিধান</string>
    <string name="app_version" translatable="false">1.7.160000</string>
    <string name="organization_name" translatable="false">Imaginative World</string>
    <string name="about_description">An Open-source, independent and full featured Bengali-English Dictionary</string>
    <string name="website" translatable="false">http://imaginativeworld.org</string>
    <string name="server_post_url" translatable="false">http://imaginativeworld.org/srv/soa/addv2.php</string>
    <string name="update_check_url" translatable="false">http://imaginativeworld.org/update/soa/soa_update.xml</string>
    <string name="url_feedback" translatable="false">http://blog.imaginativeworld.org/feedback/</string>
    <string name="url_market" translatable="false">market://details?id=org.imaginativeworld.shadhinovidhan</string>
    <string name="backup_file_name" translatable="false">so_db_backup.sodb</string>
    <string name="backup_fav_file_name" translatable="false">so_fav_backup.txt</string>
    <string name="backup_directory" translatable="false">ShadhinOvidhan_Backups</string>
    <string name="text_copied_to_clipboard" translatable="false">Text Copied to Clipboard.</string>
    <string name="add_entry_title">Add Entry</string>
    <string name="modify_entry_title">Modify Entry</string>
    <string name="view_details_title">Details</string>
    <string name="favorite_title">Favorites</string>
    <string name="history_title">History</string>
    <string name="feedback_title">স্বাধীন অভিধান</string>
    <string name="new_item_text">Touch here for change it</string>
    <string name="no_meaning_text">No meaning yet!</string>
    <string name="unable_create_database">Database can’t create!</string>
    <string name="empty_list_text">Nothing found!</string>
    <string name="fav_empty_list_text">There is no entry in your favorite list!</string>
    <string name="main_window_welcome_text_search">Type the Bangla or English word in the Search box for search</string>
    <string name="main_window_welcome_text_hint">Touch here for Search</string>
    <string name="enter_any_search_term_first">Before Web-Search write something first in the Search Box!</string>
    <string name="dialog_message_error">Error!</string>
    <string name="dialog_message_successful">Successful!</string>
    <string name="dialog_message_insert_error">No new entry added!\nMaybe the entry already exists in Database! </string>
    <string name="dialog_message_insert_successful">New entry successfully added!</string>
    <string name="dialog_message_fill_all_field">Fill all field first!</string>
    <string name="dialog_message_ok">OK</string>
    <string name="dialog_message_close">Close</string>
    <string name="dialog_message_add_another_entry">Add another one</string>
    <string name="search_type_from_first">start</string>
    <string name="search_type_from_middle">any where</string>
    <string name="search_type_from_last">end</string>
    <string name="server_txt_new" translatable="false">NEW</string>
    <string name="server_txt_modified" translatable="false">MODIFIED</string>
    <string name="server_txt_sent_by_button" translatable="false">SENTbyBUTTON</string>
    <string name="server_txt_sent_by_web_button" translatable="false">WEBsearch</string>
    <string name="update_available">Update found!</string>
    <string name="check_update">Check Update Now</string>
    <string name="update_now">Update Now</string>
    <string name="wait">Please\nWait…</string>
    <string name="update_not_found">No update\n found! </string>
    <string name="new_update_info">Latest Version: %1$s.%2$s.%3$s</string>
    <string name="update_release_date">Release Date: %1$s</string>
    <string name="do_you_want_to_download_now">Are you sure want to download the new version now?</string>
    <string name="update_error">Error!\nTry again.</string>
    <string name="internet_not_connected">Internet not connected!</string>
    <string name="menu_text_add_entry">New Entry</string>
    <string name="menu_text_favorite_list">Favorites</string>
    <string name="menu_text_history">History</string>
    <string name="menu_text_options">Options</string>
    <string name="menu_text_about">About</string>
    <string name="menu_text_exit">Exit</string>
    <string name="title_advance_search">Advanced Search</string>
    <string name="sub_title_bn_search">Bangla Search</string>
    <string name="summary_bn_search">Match from %1$s in the Search</string>
    <string name="sub_title_en_search">English Search</string>
    <string name="summary_en_search">Match from %1$s in the Search</string>
    <string name="title_cloud">Cloud</string>
    <string name="sub_title_send_to_server">New/Modified entry will send to Server</string>
    <string name="summary_send_to_server">New, Modified or Extended entries will send to the server if internet connection found. Which will help us to improve Shadhin’s Database.</string>
    <string name="title_update">Update</string>
    <string name="sub_title_auto_check_update">Automatic Update Check</string>
    <string name="summary_auto_check_update">Shadhin will update automatically if internet connection found.</string>
    <string name="ui_txt_edit_word_phrase">Word/Phrase</string>
    <string name="ui_txt_view_word_phrase">Type word/phrase here</string>
    <string name="ui_txt_edit_pos">Parts of Speech</string>
    <string name="ui_txt_view_pos">Type PoS here</string>
    <string name="ui_txt_edit_meaning">Meaning</string>
    <string name="ui_txt_view_meaning">Type meaning here</string>
    <string name="ui_default_txt_view_word" translatable="false">Word</string>
    <string name="ui_default_txt_view_pos" translatable="false">pos</string>
    <string name="question_remove_meaning_part_title">Remove?</string>
    <string name="question_remove_meaning_part_description">Are you sure want to Remove the meaning?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_delete_entry_title">Delete?</string>
    <string name="question_delete_entry_description">Are you sure want to Delete the entry \"%1$s\"?</string>
    <string name="msg_added_to_favorite_list" translatable="false">Added to Favorite List.</string>
    <string name="msg_removed_from_favorite_list" translatable="false">Removed from Favorite List!</string>
    <string name="fav_list_what_do_you_want">What do you want?</string>
    <string name="fav_list_btn_delete">Delete</string>
    <string name="fav_list_btn_copy_to_clipboard">Copy to\nClipboard</string>
    <string name="fav_list_btn_view_meaning">View\nMeaning</string>
    <string name="err_msg_unable_to_create_database">Unable to create database!</string>
    <string name="drawer_open" translatable="false">Open Drawer</string>
    <string name="drawer_close" translatable="false">Open Drawer</string>
    <string name="pref_update_db" translatable="false">pref_update_db</string>
    <string name="pref_language">UI Language</string>
    <string name="sub_title_select_language">Select UI Language</string>
    <string name="lang_bn">Bangla</string>
    <string name="lang_en">English</string>
    <string name="pref_ui_theme">UI Theme</string>
    <string name="sub_title_select_ui_theme">Select UI Theme</string>
    <string name="txt_no_history">No history found</string>
    <string name="txt_clear_history">Clear history</string>
    <string name="txt_entry_sent_to_server" translatable="false">Entry sent to server.</string>
    <string name="txt_are_you_like_out_app">What’s your opinion about Shadhin Ovidhan?</string>
    <string name="feedback_give_us_five_star" translatable="false">Give us 5 star in Google Play Store!</string>
    <string name="feedback_tell_us_what_you_need" translatable="false">Tell us what you need?</string>
    <string name="summary_language">%1$s language activated.\nIf the language not automatically activated after changing the Language, then Restart the Application.</string>
    <string name="desc_web_search">Web Search</string>
    <string name="desc_speech_to_text">Speech to Text</string>
    <string name="copyrights1" translatable="false">Copyright © 2016 Imaginative World.\nThis product is licensed under MPL 2.0.</string>
    <string name="copyrights2" translatable="false">\"Shadhin Ovidhan\"- Name, Logo &amp; its Database are the properties of Imaginative World. It\'s Database is maintained and copyrighted by Imaginative World. Any kind of USE and/or MODIFICATION without the PERMISSION of Imaginative World is PROHIBITED.</string>
    <string name="menu_text_give_rating">Rate the Shadhin</string>
    <string name="pref_backup_restore">Backup/Restore</string>
    <string name="pref_btn_backup">Backup</string>
    <string name="pref_btn_restore">Restore</string>
    <string name="desc_btn_backup">Backup favorites and new/modified entries.</string>
    <string name="desc_btn_restore">Restore your backup entries.</string>
    <string name="pref_key_backup" translatable="false">prefKeyBackup</string>
    <string name="pref_key_restore" translatable="false">prefKeyRestore</string>
    <string name="new_meaning">New meaning</string>
    <string name="add_meaning">Add Meaning</string>
    <string name="delete_meaning">Delete Meaning</string>
    <string name="permission_not_granted">Permission not Granted!</string>
    <string name="file_write_failed">File write failed!\nError Message: %1$s</string>
    <string name="file_not_created">File Not Created!</string>
    <string name="no_new_modified_entry_found">No New/Modified entry found!</string>
    <string name="external_storage_not_writable">External Storage Not Writable!</string>
    <string name="allow_permission_for_creating_backup">ALLOW the permission for creating Backup.</string>
    <string name="entry_backup_summery">Total New/Modified entry: %1$s\nBackup created at: %2$s/%3$s</string>
    <string name="entry_fav_backup_summery">Total entry: %1$s\nBackup created at: %2$s/%3$s</string>
    <string name="external_storage_not_readable">External Storage Not Readable!</string>
    <string name="allow_permission_to_retrieving_backup">ALLOW the permission to retrieving Backup.</string>
    <string name="no_backup_file_found">No backup file found!\nError message: %1$s</string>
    <string name="total_entry_restored_summery">Total %1$s entry restored and %2$s ignored (already in database).</string>
    <string name="total_fav_entry_restored_summery">Total %1$s entry restored and %2$s ignored (already in favorites).</string>
    <string name="backup_folder_not_found">Backup Folder Not Found!</string>
    <string name="enter_new_meaning">Enter a meaning:</string>
    <string name="no_fav_entry_found">No favorite entry found!</string>
    <string name="menu_text_greek_alp">Greek Alphabet</string>
    <string name="title_greek_alphabet">Greek Alphabet</string>
    <string name="total_result">%1$d results</string>
    <string name="total_hundred_plus_result">%1$d+ results</string>
    <string name="total_one_result">%1$d result</string>
    <string name="ui_default_txt_view_synonyms">Synonyms</string>
    <string name="no_synonyms_text">No synonym found!</string>
    <string name="add_synonyms">Add Synonym</string>
    <string name="delete_synonyms">Delete Synonym</string>
    <string name="enter_new_synonyms">Enter new Synonym:</string>
    <string name="new_synonyms">New synonym</string>
    <string name="ui_txt_edit_synonyms">Synonyms</string>
    <string name="sure_to_back_from_add_entry">Are you sure want to go back?</string>
    <string name="what_do_you_want">What do you want?</string>
    <string name="menu_text_tutorial">Help</string>
    <string name="search_hint">Search Now</string>
    <string name="str_database">Database</string>
    <string name="str_favorites">Favorites</string>
    <string name="menu_text_theme_color">Change Theme Color</string>
</resources>