<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textColor="#ff689f38"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textSize="12sp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>

    <View style="@style/Divider"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyrights"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_bar_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/border_margin"
        android:paddingRight="@dimen/border_margin">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height" />
    </LinearLayout>

</LinearLayout>















