<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <!-- The main content view -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/search_bar_widget"
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnDrawerMenu"
                android:layout_width="@dimen/abc_action_bar_default_height_material"
                android:layout_height="@dimen/abc_action_bar_default_height_material"
                android:background="?attr/selectableItemBackground"
                android:padding="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_menu_white_48dp" />

            <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/bright_foreground_disabled_material_dark"
                android:textSize="@dimen/abc_text_size_title_material_toolbar">

                <requestFocus />
            </EditText>

            <ImageButton
                android:id="@+id/searchWeb"
                android:layout_width="@dimen/abc_action_bar_default_height_material"
                android:layout_height="@dimen/abc_action_bar_default_height_material"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_web_search"
                android:padding="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_language_white_48dp"
                android:tint="@color/white" />

            <ImageButton
                android:id="@+id/searchClear"
                android:layout_width="@dimen/abc_action_bar_default_height_material"
                android:layout_height="@dimen/abc_action_bar_default_height_material"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_speech_to_text"
                android:padding="16dp"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_btn_speak_now"
                android:tint="@color/white" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/search_bar_widget">

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/grey_300"
                android:dividerHeight="1dp" />


            <TextView
                android:id="@+id/empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/empty_list_text"
                android:textSize="@dimen/abc_text_size_medium_material" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/layout_welcome"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/search_bar_widget"
            android:background="@color/background_material_light"
            android:clickable="true"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dialog_vertical_padding"
                android:paddingLeft="@dimen/dialog_horizontal_padding"
                android:paddingRight="@dimen/dialog_horizontal_padding"
                android:paddingTop="@dimen/dialog_vertical_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_search_white_48dp"
                    android:tint="@color/grey_500" />

                <TextView
                    android:id="@+id/txt_welcome"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/main_window_welcome_text_search"
                    android:textSize="@dimen/abc_text_size_large_material" />

            </LinearLayout>

        </FrameLayout>

        <View
            android:id="@+id/search_box_shadow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/shadow_height"
            android:layout_below="@+id/search_bar_widget"
            android:background="@drawable/shadow_top_bottom" />


        <TextView
            android:id="@+id/textView_result_count"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="6dp"
            android:gravity="end"
            android:padding="6dp"
            android:shadowColor="#fff"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="5"
            android:text="@string/total_result"
            android:textColor="@color/light_green_800"
            android:textStyle="bold|italic" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

    <RelativeLayout
        android:id="@+id/right_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/white"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp">

        <TextView
            android:id="@+id/history_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:padding="@dimen/border_margin"
            android:text="@string/history_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_title_material" />

        <ListView
            android:id="@+id/list_view_history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_layout"
            android:layout_below="@+id/history_title"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />

        <TextView
            android:id="@+id/emptyHistory"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/btn_layout"
            android:layout_below="@+id/history_title"
            android:gravity="center"
            android:text="@string/txt_no_history"
            android:textSize="@dimen/big_font_size" />

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dialog_button_bar_height"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/buttons_bar_background"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clr_history"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="?attr/selectableItemBackground"
                android:text="@string/txt_clear_history"/>

        </LinearLayout>


    </RelativeLayout>


</android.support.v4.widget.DrawerLayout>

































